fixed issue where larger images would be distorted

--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -2,6 +2,7 @@
     background-color: #353535;
     border-radius: 10px;
     box-shadow: var(--black-shadow);
+    object-fit: cover;
   }
 
   .card__info {
